--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
-project(test)
-add_executable(test0 "equation.c")
-
-link_libraries(m)
-add_executable(test1 "equation1.c")
+project(test0)
+link_libraries(test0 m)
+#add_executable(test0 "BasicPrime.c")
+#add_executable(test0 "LeapYear.c")
+#add_executable(test0 "Prime.c")
+#add_executable(test0 "RollNum.c")
+#add_executable(test0 "SplitNum.c")
