--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 project(test0)
-link_libraries(test0 m)
+#link_libraries(test0 m)
 #add_executable(test0 "BasicPrime.c")
 #add_executable(test0 "LeapYear.c")
-#add_executable(test0 "Prime.c")
+add_executable(test0 "Prime.c")
 #add_executable(test0 "RollNum.c")
 #add_executable(test0 "SplitNum.c")
+#add_executable(test0 "SuperPrime.cpp")
