--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(test0)
 #link_libraries(test0 m)
 #add_executable(test0 "BasicPrime.c")
 #add_executable(test0 "LeapYear.c")
-add_executable(test0 "Prime.c")
+#add_executable(test0 "Prime.c")
 #add_executable(test0 "RollNum.c")
 #add_executable(test0 "SplitNum.c")
 #add_executable(test0 "SuperPrime.cpp")
+add_executable(test0 "Table1.cpp")
